# ea

./: Cargo.toml  Dioxus.toml  data.csv
src/: main.rs  style.css
src/components/: Agregar.rs  Inicio.rs  NavBar.rs  NotFound.rs  Push.rs  Record.rs  mod.rs
