[package]
name = "ea"
version = "1.0.0"
authors = ["Luciano <lucianobenjaminpm@gmail.com>"]
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
dioxus-desktop = { version = "0.4" }
dioxus = { version = "0.4" }
dioxus-router = { version = "0.4" }
log = "0.4.19"
dioxus-logger = "0.4.1"
csv = "1.2.2"
serde = "1.0.188"
dioxus-free-icons = {version = "0.7.0", features = ["font-awesome-solid", "bootstrap", "material-design-icons-navigation", "material-design-icons-action", "ionicons"]}
itertools = "0.11.0"
chrono = "0.4.30"


